fix: move menu expand icon to align with text

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -196,6 +196,7 @@ nav.foldable-nav {
     content: "\f0da";
     position: absolute;
     left: 0.1em;
+    top: 0.1em;
     padding-left: 0.4em;
     padding-right: 0.4em;
     font-size: 1em;
@@ -221,11 +222,13 @@ nav.foldable-nav {
     .ul-1 .with-child > label:hover:before {
       color: $primary;
       transition: color 0.3s;
+      transform: rotate(90deg);
     }
 
     .ul-1 .with-child > input:checked ~ label:hover:before {
       color: $primary;
       transition: color 0.3s;
+      transform: rotate(90deg);
     }
   }
 }
